<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">觅拍</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="look_more">查看更多</string>
    <string name="changeLike">点赞是很认真的行为，不许反悔哦:)</string>
    <string name="time">时&#8195;&#8195;长</string>
    <string name="local">地&#8195;&#8195;点</string>
    <string name="mz_product_sort_hint">请选择产品分类</string>
    <string name="mz_sub_product_sort_hint">请选择二级分类</string>
    <string name="mz_product_sort_title">产品分类</string>
    <string name="mz_sub_product_title">二级产品分类</string>
    <string name="mz_product_tag_hint">请选择所属标签</string>
    <string name="mz_product_tag">选择所属标签</string>
    <string name="mz_location">选择定位</string>
    <string name="home_icon_1">职业形象照</string>
    <string name="home_icon_2">短视频拍摄</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_location_peng">请输入摄影棚位置</string>
    <string name="home_function_1">职业形象照</string>


    <string name="mz_home_tab_1">职业形象照</string>
    <string name="mz_home_tab_2">短视频拍摄</string>
    <string name="mz_home_tab_3">人像写真</string>
    <string name="mz_home_tab_4">活动拍摄</string>
    <string name="mz_home_tab_5">会议拍摄</string>
    <string name="mz_home_tab_6">宣传片拍摄</string>
    <string name="mz_home_tab_7">亲子照</string>
    <string name="mz_home_tab_8">平面设计师</string>
    <string name="mz_home_tab_9">婚纱摄影</string>
    <string name="mz_home_tab_10">化妆造型</string>
    <string name="mz_order_text">宝贝满足你的期待吗？说说你的使用心得，分享给想买的他们吧</string>


</resources>
