<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:delay_time="3000"
                app:image_scale_type="center_crop"
                app:indicator_drawable_selected="@drawable/shape_indicator_select"
                app:indicator_drawable_unselected="@drawable/shape_indicator_normal"
                app:indicator_height="2dp"
                app:indicator_margin="2dp"
                app:indicator_width="6dp" />

            <LinearLayout
                android:id="@+id/ll_marqueen"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_marqueen_ring" />

                <com.sunfusheng.marqueeview.MarqueeView
                    android:id="@+id/simpleMarqueeView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:paddingRight="5dp"
                    app:mvAnimDuration="2000"
                    app:mvDirection="bottom_to_top"
                    app:mvInterval="3000"
                    app:mvSingleLine="true"
                    app:mvTextColor="@color/white"
                    app:mvTextSize="10sp" />

            </LinearLayout>
        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@color/mz_home_tab_bg_color"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_1"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_function_tab_8"
                    android:text="@string/mz_home_tab_1"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_2"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_function_tab_3"
                    android:text="@string/mz_home_tab_2"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_3"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_home_rxps"
                    android:text="@string/mz_home_tab_3"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_4"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_home_hdps"
                    android:text="@string/mz_home_tab_4"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_5"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_home_hyps"
                    android:text="@string/mz_home_tab_5"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_6"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_function_tab_2"
                    android:text="@string/mz_home_tab_6"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_7"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_home_tab_qzz"
                    android:text="@string/mz_home_tab_7"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_8"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_function_tab_7"
                    android:text="@string/mz_home_tab_8"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_9"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_function_tab_9"
                    android:text="@string/mz_home_tab_9"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />

                <cn.hym.superlib.mz.widgets.DrawableTextView
                    android:id="@+id/home_tab_10"
                    style="@style/mz_home_tab"
                    android:drawableTop="@drawable/ic_function_tab_10"
                    android:text="@string/mz_home_tab_10"
                    app:drawableTopHeight="26dp"
                    app:drawableTopWidth="27dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_need"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/bg_need_shape"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:maxEms="2"
                    android:text="需求中心"
                    android:textColor="#FF5203"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/icon_need" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="27dp"
                    android:layout_marginBottom="3dp"
                    android:background="#D8D8D8" />

                <com.sunsky.marqueeview.MarqueeView
                    android:id="@+id/upview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    app:animDuration="1000"
                    app:interval="5000"
                    app:isSetAlphaAnim="true" />

                <com.sunfusheng.marqueeview.MarqueeView
                    android:id="@+id/news_marqueen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:mvAnimDuration="2000"
                    app:mvDirection="bottom_to_top"
                    app:mvInterval="3000"
                    app:mvSingleLine="true"
                    app:mvTextColor="@color/mipaiTextColorNormal"
                    app:mvTextSize="12sp" />


                <TextView
                    android:id="@+id/tv_more_news"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="更多"
                    android:textColor="@color/mipaiTextColorNormal"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/bg_need_shape"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_need_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:text="免费发需求平台 推荐优质工作室"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_need_i_what"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="0.8"
                    android:text="我想找"
                    android:textColor="#616161"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/et_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="3"
                    android:background="@drawable/bg_edittext_shape"
                    android:hint="摄影师"
                    android:padding="8dp"
                    android:textColor="@color/mipaiTextColorNormal"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_for_me"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/bg_need_bt_shape"
                    android:gravity="center"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="为我推荐"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#f7f7f7"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_new_vadieo"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="精选视频"
                android:textColor="@color/black" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_more_vadieo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_arrow_right"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="更多"
                android:textColor="@color/mipaiTextColorNormal"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>

